--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "mssql": "^12.1.0",
     "nodemon": "^3.1.10",
     "tsx": "^4.20.6"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
+    "@types/mssql": "^9.1.8",
     "typescript": "^5.9.3"
   }
 }
