--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
     "express": "^5.1.0",
     "mssql": "^12.1.0",
     "nodemon": "^3.1.10",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "tsx": "^4.20.6"
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
     "@types/mssql": "^9.1.8",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "typescript": "^5.9.3"
   }
 }
