--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "tsx": "^4.20.6"
   },
   "devDependencies": {
+    "esbuild": "^0.25.12",
     "@types/express": "^5.0.5",
     "@types/mssql": "^9.1.8",
     "@types/swagger-jsdoc": "^6.0.4",
